# money

./: .env.dev  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
devops/sql/: 2026031001_user.sql
docs/: design.md
src/: lib.rs  main.rs
src/api/user/: dto.rs
src/config/: db.rs  env.rs  log.rs  mod.rs  route.rs
src/domain/: mod.rs  service.rs
src/domain/share/: auth.rs  dto.rs  error.rs  mod.rs  response.rs
src/domain/user/: error.rs  mod.rs  repository.rs
src/domain/user/model/: entity.rs
src/infrastructure/user/: sqlite.rs
src/macros/: log.rs
src/trigger/http/: authenticated_user.rs  mod.rs  user.rs
src/util/: jwt.rs
tests/: lib.rs  user_repo_test.rs
tests/user/: mod.rs  user_api_test.rs  user_repo_test.rs
