[package]
name = "money"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"

time = {
    version = "0.3.47",
    features = ["macros", "formatting"],
}
tracing = "0.1.44"
tracing-subscriber = {
    version = "0.3.22",
    features = ["env-filter", "json", "time"],
}
tracing-appender = "0.2.4"