[package]
name = "money"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"

time = { version = "0.3.47", features = ["macros", "formatting"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json", "time"] }
tracing-appender = "0.2.4"

tokio = { version = "1.50.0", features = ["full"] }

sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "chrono"] }

serde = { version = "1.0.228", features = ["derive"] }

anyhow = "1.0.102"
thiserror = "2.0.18"

chrono = { version = "0.4.44", features = ["serde"] }

async-trait = "0.1.89"

axum = { version = "0.8.8" }

validator = { version = "0.20.0", features = ["derive"] }

argon2 = "0.6.0-rc.8"
jsonwebtoken = { version = "10.3.0", default-features = false, features = ["rust_crypto"] }
